prusti-tests/tests/verify_overflow/fail/overflow/div_u64.rs
fn test(x: u64, y: u64) -> u64 {
    x / y //~ ERROR
}

fn main() {}
